--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "npx tsc",
     "format": "npx prettier --write \"src/**/*.ts\"",
     "prestart": "npm run build",
-    "start": "node ./dist/index.js"
+    "start": "node ./dist/index.js",
+    "run": "node ./dist/index.js"
   },
   "author": "joekiller",
   "license": "ISC",
